# csound-vst3

./: .gitignore  .gitmodules  README.md  make_artifacts.sh  make_icons.bash  png_to_icns.py
CsoundVST3/: CMakeLists.txt  CsoundVST3.jucer  codesign.sh  install.sh
CsoundVST3/Builds/MacOSX/: CsoundVST.csd  CsoundVST3.csd  csound_threaded.hpp  csoundvst3_version.h
CsoundVST3/Builds/MacOSX/CsoundVST3.xcodeproj/: project.pbxproj
CsoundVST3/Builds/MacOSX/Examples/: Xanadu.csd
CsoundVST3/JuceLibraryCode/: BinaryData.h  BinaryData2.cpp  JuceHeader.h  JucePluginDefines.h
CsoundVST3/Resources/: README.md  README.unformatted.md
CsoundVST3/Source/: AboutDialog.h  CsoundTokeniser.cpp  CsoundTokeniser.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  csd_ids.h  csound_threaded.hpp  csoundvst3_version.h  readerwriterqueue.h
examples/: CsoundVST.csd  CsoundVST3MidiOut.csd  Xanadu.csd
